Styles: code format and spell check & tidy

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -12,6 +12,8 @@
 {% block content %}
 
     <div class="container-fluid ib-container bg-ib-white text-ib-dark px-md-4 py-4 py-md-5 font-body">
+
+        <!-- Title Section -->
         <div class="row">
             <div class="col">
                 <h1 class="font-title weight-bold section-title-lrg mb-2">YOUR BAG...</h1>
