--- a/manage/templates/manage/manage.html
+++ b/manage/templates/manage/manage.html
@@ -36,7 +36,6 @@
                     <p class="d-inline">ADMIN AREA</p>
                 </a>
             </div>
-            
         </div>
     </div>
 
@@ -46,21 +45,20 @@
             <hr class="mt-4 mb-4">
         </div>
     </div>
-    
 
     <div class="row">
         <div class="bg-ib-light col-12 col-lg-10 offset-lg-1 p-3">
             <div class="d-flex justify-content-between flex-wrap ">
 
                 <div class="mb-3 d-flex flex-wrap align-items-end d-sm-block">
+
+                    <!-- Messages Title -->
                     <h2 class="subtitle weight-semibold text-dark-grey mb-0 me-2 me-sm-0 mb-sm-1">CUSTOMER MESSAGES</h2>
-                
+                    
+                    <!-- Messages Current Filter & Count -->
                     <p class="small weight-regular text-mid-grey">{% if current_filter %}<span class="text-uppercase">{{current_filter}}{% else %}ALL</span>{% endif %} MESSAGES ({{ customer_messages|length }})</p>
 
                 </div>
-                <!-- Messages Title -->
-                
-                
 
                 <!-- Messages Filter Buttons -->
                 <div class="d-flex justify-content-end align-items-end mb-4">
@@ -79,16 +77,14 @@
                 </div>
             </div>
                 
-
             {% for message in customer_messages %}
-            <!-- Message -->
+                <!-- Message -->
                 <div class="row text-ib-dark {% if message.is_open %}bg-message-open{% else %}bg-message-closed{% endif %} w-100 m-auto mb-3 py-3 shadow-sm {% if message.is_open %}border-open{% else%}border-closed{%endif%}">
                     <div class="col-12 d-flex small-para-text">
                         <p class="me-3">{{message.created_on|date:"d/m/Y"}}</p>
                         <a class="text-blue text-link-blue weight-semibold" href="mailto:{{message.email}}">
                             <p>{{message.email}}</p>
                         </a>
-    
                     </div>
                     <div class="col-12 mt-2">
                         <p class="weight-semibold">{{message.subject}}</p>
@@ -118,7 +114,6 @@
 {% endblock %}
 
 {% block extra_js_end %}
-
 <!-- Sends Toggle Value to View & Submits Form -->
 <script src="{% static 'manage/js/message_toggle.js' %}"></script>
 <!-- Scroll To Previous Location on Reload JS -->
