feat: add manage review styling

--- a/manage/templates/manage/manage.html
+++ b/manage/templates/manage/manage.html
@@ -10,21 +10,22 @@
 
 {% block content %}
 
-<div class="container-fluid ib-container bg-light-grey text-ib-dark p-4 py-md-5 font-body">
-    
+<div class="container-fluid ib-container bg-light-grey text-ib-dark p-4 py-md-5 px-4 px-sm-4 px-md-5 px-lg-0 font-body">
+
     <!-- Title Section -->
     <div class="row">
-        <div class="col-12 col-lg-10 offset-lg-1 px-3 px-md-0">
+        <div class="col-12 col-lg-10 offset-lg-1 px-0">
             <h1 class="font-title weight-bold section-title-lrg mb-2">SITE MANAGEMENT</h1>
 
             <hr class="mt-4 mb-4">
         </div>
     </div>
 
-    <!-- Product Management -->
+    <!-- Useful Links -->
     <div class="row">
         <div class="bg-ib-light col-12 col-lg-10 offset-lg-1 pt-3 pb-3 px-3">
-            <h2 class="subtitle weight-semibold text-dark-grey mb-3">USEFUL LINKS</h2>
+            <h2 class="subtitle weight-semibold text-ib-dark mb-3">USEFUL LINKS</h2>
+
             <div class="d-flex flex-wrap button-group"> 
                 <a href="{% url 'add_product' %}" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold shadow-sm me-3 mb-3">
                     <p class="d-inline">ADD PRODUCT</p>
@@ -45,18 +46,17 @@
             <hr class="mt-4 mb-4">
         </div>
     </div>
-
-    <div class="row">
+    <div class="row" >
         <div class="bg-ib-light col-12 col-lg-10 offset-lg-1 p-3">
             <div class="d-flex justify-content-between flex-wrap ">
 
                 <div class="mb-3 d-flex flex-wrap align-items-end d-sm-block">
 
                     <!-- Messages Title -->
-                    <h2 class="subtitle weight-semibold text-dark-grey mb-0 me-2 me-sm-0 mb-sm-1">CUSTOMER MESSAGES</h2>
+                    <h2 class="subtitle weight-semibold text-ib-dark mb-0 me-2 me-sm-0 mb-sm-1">CUSTOMER MESSAGES</h2>
                     
                     <!-- Messages Current Filter & Count -->
-                    <p class="small weight-regular text-mid-grey">{% if current_filter %}<span class="text-uppercase">{{current_filter}}{% else %}ALL</span>{% endif %} MESSAGES ({{ customer_messages|length }})</p>
+                    <p class="small weight-regular text-ib-dark">{% if current_filter %}<span class="text-uppercase">{{current_filter}}{% else %}ALL</span>{% endif %} MESSAGES ({{ customer_messages|length }})</p>
 
                 </div>
 
@@ -76,8 +76,9 @@
                     </div>
                 </div>
             </div>
-                
-            {% for message in customer_messages %}
+             
+            <div class="" id="manage-messages">
+                {% for message in customer_messages %}
                 <!-- Message -->
                 <div class="row text-ib-dark {% if message.is_open %}bg-message-open{% else %}bg-message-closed{% endif %} w-100 m-auto mb-3 py-3 shadow-sm {% if message.is_open %}border-open{% else%}border-closed{%endif%}">
                     <div class="col-12 d-flex small-para-text">
@@ -99,7 +100,7 @@
                         <form method="POST" action="{% url 'toggle_message' message.id %}" id="message-form-{{message.id}}">
                             {% csrf_token %}
                             <div class="form-check form-switch">
-                                <input class="message-toggle form-check-input form-check-message" type="checkbox" role="switch" name="toggle-open" id="{{message.id}}" {% if message.is_open is False %}Checked{% endif %} aria-label="Toggle message status">
+                                <input class="message-toggle form-check-input form-check-ib" type="checkbox" role="switch" name="toggle-open" id="{{message.id}}" {% if message.is_open is False %}Checked{% endif %} aria-label="Toggle message status">
                             </div>
     
                             <!-- Hidden input to submit value of toggle -->
@@ -108,6 +109,146 @@
                     </div>
                 </div>
             {% endfor %}
+            </div>
+            
+        </div>
+    </div>
+
+
+    <!-- Reviews Section -->
+    <div class="row" id="manage-reviews">
+        <div class="col-12 col-lg-10 offset-lg-1 px-0">
+            <hr class="mt-4 mb-4">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="bg-blue-light col-12 col-lg-10 offset-lg-1 p-3">
+            <div class="d-flex justify-content-between flex-wrap ">
+
+                <div class="mb-3 d-flex flex-wrap align-items-end d-sm-block">
+
+                    <!-- Reviews Title & Intro Text -->
+                    <h2 class="subtitle weight-semibold text-ib-dark mb-0 me-2 me-sm-0 mb-sm-1">UNAPPROVED REVIEWS</h2>
+                    <p class="small weight-regular text-ib-dark">The following reviews are unapproved. Once approved they will appear on the site.</p>
+
+                </div>
+            </div>
+            
+            <div class="" id="manage-reviews">
+                {% if reviews|length > 0 %}
+                {% for review in reviews %}
+                    {% if not review.is_approved %}
+                        <!-- Review -->
+                        <div class="row text-ib-dark w-100 m-auto mb-3 shadow-sm bg-ib-light">
+                            <div class="col-3 col-md-2 d-none d-sm-flex py-3 ps-3 pe-0">
+                                <!-- Product Image -->
+                                <a href="{% url 'products' %}">
+                                    {% if review.product.image %}
+                                        <img class="img-fluid image-ratio" src="{{ review.product.image.url }}" alt="{{ review.product.name }}" onerror="this.onerror=null;this.src='{{ MEDIA_URL }}no_image.jpg'">
+                                    {% else %}
+                                        <img class="img-fluid image-ratio" src="{{ MEDIA_URL }}no_image.jpg" alt="{{ review.product.name }}">
+                                    {% endif %}
+                                </a>
+                            </div>
+
+                            <div class="col-12 col-sm-9 col-md-10 p-3">
+
+                                <!-- Product Name -->
+                                <div class="row font-body review-header">
+                                    <div class="col-12 col-sm-8">
+                                        <h2 class="profile-review-product text-uppercase weight-semibold ib-lh-1">{{ review.product }}</h3>
+                                    </div>
+
+                                    <!-- Review Rating -->
+                                    <div class="col-12 col-sm-4 text-start text-sm-end mt-2 mt-sm-0">
+                                        <div class="rating-div review-rating ib-lh-1 pe-0">
+                                            <span class="ib-lh-1 rating-hex-small rating-hex-{% if review.rating >= 1 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                            <span class="ib-lh-1 rating-hex-small rating-hex-{% if review.rating >= 2 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                            <span class="ib-lh-1 rating-hex-small rating-hex-{% if review.rating >= 3 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                            <span class="ib-lh-1 rating-hex-small rating-hex-{% if review.rating >= 4 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                            <span class="ib-lh-1 rating-hex-small rating-hex-{% if review.rating >= 5 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Review Title & Date -->
+                                <div class="row font-body text-dark-grey my-2">
+                                    <div class="col-12 d-block d-flex flex-wrap align-items-baseline">
+                                        <p class="profile-review-title me-3">{{ review.title }}</p>
+                                        <p class="weight-light m-0">{{ review.created_on|date:"d/m/Y" }}</p>
+                                    </div>
+                                </div>
+
+                                <!-- Review Content -->
+                                <div class="row font-body review-content text-dark-grey">
+                                    <p>{{ review.content }}</p>
+                                </div>
+
+                                <!-- Review EDIT / DELETE Buttons -->
+                                {% if request.user.is_superuser %}
+                                    <div class="row d-flex justify-content-between align-items-end">
+                                        <div class="col mt-3">
+                                            {% if request.user == review.user %}
+                                                <!-- Edit Review - Review Author Only -->
+                                                <a href="{% url 'edit_review' review.id %}?next={{ request.path|urlencode }}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
+                                            {% endif %}
+
+                                            <!-- Delete Review - Review Author or Superuser Only -->
+                                            <button type="button" data-toggle="modal" data-target="#modal-{{ review.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>
+                                        </div>
+                                        <div class="col fit-content d-flex justify-content-end align-items-end">
+                                            <p class="me-3 ib-lh-1">APPROVE REVIEW<span class="weight-semibold"></span></p>
+                                            <!-- Form to change message is_open status -->
+                                            <form method="POST" action="" id="review-toggle-form-{{review.id}}">
+                                                {% csrf_token %}
+                                                <div class="form-check form-switch p-0">
+                                                    <input class="message-toggle form-check-input form-check-ib m-0 mt-3" type="checkbox" role="switch" name="toggle-open" id="{{message.id}}" {% if message.is_open is False %}Checked{% endif %} aria-label="Toggle message status">
+                                                </div>
+                        
+                                                <!-- Hidden input to submit value of toggle -->
+                                                <input type="hidden" id="message-{{message.id}}-input" name="is_open" value="{{ message.is_open }}">
+                                            </form>   
+                                        </div>
+
+                                    </div>
+            
+                                    <!-- Confirm Delete Modal - Defensive Programming -->
+                                    <div class="modal fade" id="modal-{{ review.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header justify-content-between bg-dark-grey py-3">
+                                                    <h5 class="font-body text-ib-light">DELETE REVIEW</h5>
+                                                    <button type="button" class="close modal-close-cross text-ib-light" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true" class="ib-lh-1">&times;</span>
+                                                    </button>
+                                                </div>
+                                                <div class="modal-body pb-2 font-body">
+                                                    <p>Are you sure you want to the delete the review...
+                                                    <strong>"{{ review.title }}"</strong></p>
+                                                </div>
+                                                <div class="modal-footer pt-0">
+                                                    <button type="button" class="edit-del-btn dismiss-btn font-title text-decoration-none weight-regular align-middle me-2" data-dismiss="modal">CLOSE</button>
+                                                    <a href="{% url 'delete_review' review.id %}?next={{ request.path|urlencode }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                {% endif %}
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            {% else %}
+                <!-- No Reviews Text -->
+                <div class="col-12 text-center">
+                    <p class="font-body">No Reviews to Approve</p>
+                </div>
+            {% endif %}
+
+            </div>
+            
+
         </div>
     </div>
 </div>
